--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *.map
 *.out
 *.obj
+*.lst
 
 # Trash
 *.bak
@@ -35,6 +36,7 @@ thumbs.db
 **/Obj/*.pbd.*
 **/Obj/*.pbi
 **/Obj/*.pbi.*
+**/obj/*.pbw
 
 # IAR project "Debug" directory
 Debug/
